--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,40 @@
 version: "3"
 
 services:
-  vote:
-    #build: ./vote
-    image: nzleoliang/vote:latest
-    command: python app.py
-    volumes:
-     - ./vote:/app
-    ports:
-      - "5000:80"
-    networks:
-      - front-tier
-      - back-tier
+  # vote:
+  #   #build: ./vote
+  #   image: nzleoliang/vote:latest
+  #   command: python app.py
+  #   volumes:
+  #    - ./vote:/app
+  #   ports:
+  #     - "5000:80"
+  #   networks:
+  #     - front-tier
+  #     - back-tier
 
-  result:
-    #build: ./result
-    image: nzleoliang/result:latest
-    command: nodemon server.js
-    volumes:
-      - ./result:/app
-    ports:
-      - "5001:80"
-      - "5858:5858"
-    networks:
-      - front-tier
-      - back-tier
+  # result:
+  #   #build: ./result
+  #   image: nzleoliang/result:latest
+  #   command: nodemon server.js
+  #   volumes:
+  #     - ./result:/app
+  #   ports:
+  #     - "5001:80"
+  #     - "5858:5858"
+  #   networks:
+  #     - front-tier
+  #     - back-tier
 
-  worker:
-    # build:
-    #   context: ./worker
-    image: nzleoliang/worker:latest
-    depends_on:
-      - "redis"
-      - "db"
-    networks:
-      - back-tier
+  # worker:
+  #   # build:
+  #   #   context: ./worker
+  #   image: nzleoliang/worker:latest
+  #   depends_on:
+  #     - "redis"
+  #     - "db"
+  #   networks:
+  #     - back-tier
 
   redis:
     image: redis:alpine
